# sensor_fusion

./: README.md  package.xml
deprecated/: CMakeLists.txt
deprecated/include/sensor_fusion/: velo2cam.hpp
gtest/: test_main.cpp
include/sensor_fusion/: velo2cam.hpp
ipynb/: kitti_utils.ipynb
scripts/: kitti_util.py  vis_lidar.py
src/: velo2cam.cpp
